# qtun-rs

./: Cargo.toml  README.md  build.rs
proto/: protocol.proto
src/: app.rs  build.rs  config.rs  lib.rs  main.rs  protocol.rs
src/config/: opt.rs
src/connection/: client.rs  conn.rs  message.proto  message.rs  mod.rs  server.rs
src/fileserver/: mod.rs
src/iface/: mod.rs  packet.rs  tun.rs
src/socks5/: auth.rs  mod.rs  request.rs  resolver.rs  server.rs
src/transport/: client.rs  client_conn.rs  crypto.rs  mod.rs  server.rs  server_conn.rs
src/tun/: tun.rs
src/utils/: hash.rs  mod.rs  timer.rs
