[package]
name = "qtun-rs"
version = "0.1.0"
authors = ["matthewgao <matthewgao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
lazy_static = "1.4.0"
prost = "0.12"
# Only necessary if using Protobuf well-known types:
prost-types = "0.12"
tun = "0.6.1"

[build-dependencies]
prost-build = "0.12"
